# reprep

./: .bumbversion.cfg  .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  TODO.txt  api.html  demos.sh  genindex.html  guide.html  index.html  main.html  objects.inv  project.pp1.yaml  py-modindex.html  pypackage.mk  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.json  setup.py  setup_info.py  shippable.yml  tests_with_coverage.sh  tutorial.html  upload.sh  why.html
.circleci/: config.yml  reprep_tests.tests
api/: modules.html  reprep.demos.html  reprep.graphics.html  reprep.html  reprep.output.html  reprep.plot_utils.html  reprep.tests.html  reprep.utils.html
demos/: colormaps.py  reprep_ex_mime.py
docs/: Makefile  design.rst  epydoc.cfg  init_website.sh
docs/source/: conf.py  download.html  index.rst  tutorial.rst
docs/source/my_templates/: layout.html
modules/: index.html  reprep.html
modules/reprep/: config.html  figure.html  helpers.html  interface.html  mpl.html  node.html  repcontracts.html  structures.html  table.html
modules/reprep/demos/: colormaps.html  manager.html  report_layout.html  spines.html
modules/reprep/graphics/: conversions.html  conversions_tests.html  filter_colormap.html  filter_posneg.html  filter_posneg_test.html  filter_scale.html  numpy_utils.html  scaling.html  success.html  zoom.html
modules/reprep/output/: html.html  platex.html  platex_test.html
modules/reprep/plot_utils/: axes.html  spines.html  styles.html
modules/reprep/tests/: test_colormaps.html  test_idioms.html  test_urls.html  utils.html
modules/reprep/utils/: indent.html
sources/: api.txt  guide.txt  index.txt  why.txt
sources/api/: modules.txt  reprep.demos.txt  reprep.graphics.txt  reprep.output.txt  reprep.plot_utils.txt  reprep.tests.txt  reprep.txt  reprep.utils.txt
src/reprep/: __init__.py  config.py  constants.py  datanode.py  figure.py  helpers.py  interface.py  mime_extensions.py  mpl.py  node.py  repcontracts.py  structures.py  table.py  types.py  utils.py
src/reprep/demos/: __init__.py  clear_plots.py  colormaps.py  demo_tests.py  figures.py  manager.py  report_layout.py  spines.py  table.py
src/reprep/graphics/: __init__.py  conversions.py  conversions_test.py  conversions_tests.py  filter_colormap.py  filter_posneg.py  filter_posneg_test.py  filter_scale.py  numpy_utils.py  posneg.py  posneg_test.py  scale.py  scaling.py  success.py  zoom.py
src/reprep/output/: __init__.py  html.py  html_test.py  platex.py  platex_test.py
src/reprep/output/hdf/: __init__.py  hdf1_rawdata.py  hdf1_read.py  hdf1_write.py  hdf_read.py  test_hdf.py
src/reprep/output/ipn/: node.py
src/reprep/plot_utils/: __init__.py  axes.py  spines.py  styles.py
src/reprep/report_utils/: __init__.py  frozen.py  report_manager.py  store_results.py  with_description.py
src/reprep/report_utils/repmanager/: __init__.py  report_manager.py
src/reprep/report_utils/statistics/: __init__.py  data_view.py  reductions.py  structures.py
src/reprep/report_utils/storing/: __init__.py  store_results.py  store_results_array.py  store_results_dict.py
src/reprep/report_utils/tables/: tables_misc.py  tables_misc_test.py
src/reprep/static/PopBox/: readme.html
src/reprep/static/jquery/: jquery.imageZoom.js
src/reprep/tests/: __init__.py  cases.py  common.py  simple_test_cases.py  test_colormaps.py  test_idioms.py  test_urls.py  utils.py
src/reprep/utils/: __init__.py  deprecation.py  equality_mixin.py  frozen.py  indent.py  natsorting.py
src/reprep_tables/: __init__.py  make_tables.py
src/reprep_tests/: __init__.py  cases.py  checks_generation.py  common.py  conversions_tests.py  demo_tests.py  filter_posneg_test.py  html_test.py  simple_test_cases.py  test_colormaps.py  test_filter_posneg.py  test_hdf.py  test_idioms.py  test_urls.py
static/apidocs/: api-objects.txt  class-tree.html  exceptions.AssertionError-class.html  frames.html  help.html  identifier-index.html  module-tree.html  redirect.html  reprep-module.html  reprep-pysrc.html  reprep.config-module.html  reprep.config-pysrc.html  reprep.config.RepRepDefaults-class.html  reprep.constants-module.html  reprep.constants-pysrc.html  reprep.demos-module.html  reprep.demos-pysrc.html  reprep.demos.colormaps-module.html  reprep.demos.colormaps-pysrc.html  reprep.demos.manager-module.html  reprep.demos.manager-pysrc.html  reprep.demos.manager.DemoStorage-class.html  reprep.demos.report_layout-module.html  reprep.demos.report_layout-pysrc.html  reprep.demos.spines-module.html  reprep.demos.spines-pysrc.html  reprep.figure-module.html  reprep.figure-pysrc.html  reprep.figure.Figure-class.html  reprep.figure.SubFigure-class.html  reprep.graphics-module.html  reprep.graphics-pysrc.html  reprep.graphics.conversions-module.html  reprep.graphics.conversions-pysrc.html  reprep.graphics.conversions_tests-module.html  reprep.graphics.conversions_tests-pysrc.html  reprep.graphics.conversions_tests.Test-class.html  reprep.graphics.filter_colormap'-module.html  reprep.graphics.filter_colormap'-pysrc.html  reprep.graphics.filter_posneg-module.html  (+124 more)
(+19 files in other folders)
