[project]
name = "reprep-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "reprep-z7"
version = "7.2"
description = "report reproducible research tables html latex"
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "reprep"},
    {from = "src", include = "reprep/demos"},
    {from = "src", include = "reprep/graphics"},
    {from = "src", include = "reprep/output"},
    {from = "src", include = "reprep/output/hdf"},
    {from = "src", include = "reprep/output/ipn"},
    {from = "src", include = "reprep/plot_utils"},
    {from = "src", include = "reprep/report_utils"},
    {from = "src", include = "reprep/report_utils/statistics"},
    {from = "src", include = "reprep/report_utils/statistics/library"},
    {from = "src", include = "reprep/report_utils/statistics/structures"},
    {from = "src", include = "reprep/report_utils/statistics/tables"},
    {from = "src", include = "reprep/report_utils/storing"},
    {from = "src", include = "reprep/utils"},
    {from = "src", include = "reprep_tables"},
    ]

[tool.poetry.dependencies]
PyContracts3 = ">=7"
docutils = "*"
ipython = "*"
matplotlib = "*"
numpy = "*"
pillow = "*"
scipy = "*"
setuptools = "*"
typing_extensions = "*"
zuper-commons-z7 = "*"

[tool.poetry.group.test.dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
